--- a/README
+++ b/README
@@ -5,19 +5,21 @@ Author: Alistair Buxton <a.j.buxton@gmail.com>
 Why
 ---
 
-Flash plugin incorrectly determines the fullscreen resolution when using nvidia twinview. 
-The result is that fullscreen windows fill the primary monitor, but the video gets scaled as if
-the primary monitor had the resolution of the total display area.
+Flash plugin incorrectly determines the fullscreen resolution when 
+using nvidia twinview. The result is that fullscreen windows fill 
+the primary monitor, but the video gets scaled as if the primary 
+monitor had the resolution of the total display area.
 
 How
 ---
 
-The npviewer script loads the hack with LD_PRELOAD and it patches the XGetGeometry call
-which flash uses to determine screen size. If XGetGeometry would return the size of the root
-window, the patch causes it to instead return the size of the primary monitor.
+The npviewer script loads the hack with LD_PRELOAD and it patches 
+the XGetGeometry call which flash uses to determine screen size. 
+If XGetGeometry would return the size of the root window, the patch 
+causes it to instead return the size of a single monitor.
 
-*** NOTE: you must enter the sizes of your root window and primary monitor before compiling ***
-          (i will fix this later)
+The monitor sizes sent are now based on Xinerama.
+
 
 Config
 ------
